improved UI and db connection, now working and presentable

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="app">
         <!-- Join Community Page BF1 -->
-        <section id="home-page" class="active-page">
+        <section id="home-page" class="hidden">
             <h1>Welcome to the ESN Community!</h1>
             <button id="joinBtn">Join the Community</button>
         </section>
@@ -31,8 +31,10 @@
         <section id="confirmation-page" class="hidden">
             <h2>Confirm Account Creation</h2>
             <!-- BF6 -->
-            <button id="confirmBtn">Confirm</button>
-            <button id="notConfirmBtn">Nope</button>
+            <div class="button-container">
+                <button id="confirmBtn">Confirm</button>
+                <button id="notConfirmBtn">Nope</button>
+            </div>
             <!-- BF78 S-->
 
         </section>
