fixed acknowledgement alignment

--- a/public/index.html
+++ b/public/index.html
@@ -43,33 +43,36 @@
         <section id="welcome-page" class="hidden">
             <h2>Welcome, New Citizen!</h2>
             <p>Here's how to share a status...</p>
+        <div class = "table-container">
             <table border="1">
-        <tr>
-            <th>Status</th>
-            <th>Explanation</th>
-            <th>Color Code</th>
-        </tr>
-        <tr>
-            <td>OK</td>
-            <td>I am OK: I do not need help.</td>
-            <td>Green</td>
-        </tr>
-        <tr>
-            <td>Help</td>
-            <td>I need help, but this is not a life threatening emergency.</td>
-            <td>Yellow</td>
-        </tr>
-        <tr>
-            <td>Emergency</td>
-            <td>I need help now: this is a life threatening emergency!</td>
-            <td>Red</td>
-        </tr>
-        <tr>
-            <td>Undefined</td>
-            <td>The user has not provided any status info.</td>
-            <td>Undefined</td>
-        </tr>
-    </table>
+                <tr>
+                    <th>Status</th>
+                    <th>Explanation</th>
+                    <th>Color Code</th>
+                </tr>
+                <tr>
+                    <td>OK</td>
+                    <td>I am OK: I do not need help.</td>
+                    <td>Green</td>
+                </tr>
+                <tr>
+                    <td>Help</td>
+                    <td>I need help, but this is not a life threatening emergency.</td>
+                    <td>Yellow</td>
+                </tr>
+                <tr>
+                    <td>Emergency</td>
+                    <td>I need help now: this is a life threatening emergency!</td>
+                    <td>Red</td>
+                </tr>
+                <tr>
+                    <td>Undefined</td>
+                    <td>The user has not provided any status info.</td>
+                    <td>Undefined</td>
+                </tr>
+            </table>
+        </div>
+            
             <!--Acknowledgement BF10 11 12-->
             <button id="acknowledgeBtn">I Understand</button>
         </section>
