--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,8 @@
     </div>
 
     <!-- Link to JavaScript for interactivity -->
+    <!-- <script type="text/javascript" src="socket.io/socket.io.js"></script> -->
     <script src="homeScript.js"></script>
+    
 </body>
 </html>
