--- a/public/chatroom.html
+++ b/public/chatroom.html
@@ -41,7 +41,7 @@
     
 
     <!-- make the socket client library and  avaliable to handle real-time messaging -->
-    <!-- <script src="socket.io/socket.io.js"></script> -->
+    <script src="socket.io/socket.io.js"></script> 
     <script src="ChatScreen.js"></script>
 
 
